2011-01-28  Minh Dao Tran  <dao@kr.tuwien.ac.at>

	* src/solver/RelSatSolver.cpp: Refresh after each solve.

	* src/network/JoinThread.cpp: Loop forever.
	* src/network/RelSatSolverThread.cpp: Likewise.

	* src/dmcs/StreamingDMCS.cpp: Start_up any time called.

	* include/network/NeighborOut.h: Use string header.

	* include/network/NeighborThread.h: Incoming thread: keep reading
	after receiving EOF

	* src/solver/RelSatSolver.cpp: Add debug info.

	* src/network/JoinThread.cpp: Case distinction: when ask for NEXT,
	when ask for a restart.

	* include/network/JoinThread.h (ask_for_next): Add NotificationType.

2011-01-28  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* include/network/connection.hpp (connection::write): Add synchronous write().

	* include/network/OutputThread.h: Fix OutputThread loop.
	* src/network/OutputThread.cpp: Likewise.

2011-01-27  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* include/network/Handler.tcc: Add sanity checks.

	* include/dmcs/ConflictNotification.h: Add NEXT notification type.
	* include/network/NeighborOut.h: Likewise.
	* src/network/JoinThread.cpp: Likewise.

	* src/dmcs/StreamingDMCS.cpp (StreamingDMCS::work): Not
	implemented yet.

	* include/network/NeighborOut.h: Merge NeighborIn into
	NeighborThread and threadify NeighborOut.
	* include/network/NeighborThread.h: Likewise.

	* include/network/BaseStreamer.h: Remove.
	* include/network/Makefile.am: Likewise.
	* include/network/NeighborIn.h: Likewise.

	* include/mcs/BeliefState.h: Add operator=.

	* include/dmcs/StreamingBackwardMessage.h: Typo.
	* include/network/JoinThread.h: Likewise.
	* src/network/JoinThread.cpp: Likewise.
	* src/network/OutputThread.cpp: Likewise.

	* examples/diamond.opt: Fix epsilon bit in V.

	* testsuite/Makefile.am (testInterfaceRelSat_LDADD): Add libdmcs.a

	* include/network/JoinThread.h: Use PODs as thread parameters and implement shutdown.
	* include/network/Handler.h: Likewise.
	* include/network/Handler.tcc: Likewise.